# VTPE

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qss/: myqss.qss
src/: dataProcess.cpp  dataProcess.h  workThread.cpp  workThread.h
